<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dill"
    tools:ignore="MissingClass">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="#181717"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:backgroundTint="#A7353232"
        android:layout_width="260dp"
        android:layout_height="370dp"
        app:cardCornerRadius="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >


        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/Turkmen"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:backgroundTint="#587FBA"
                android:onClick="dil"
                android:tag="tm"
                android:text="@string/tm_tm"
                android:textColor="#D8E4D6" />

            <Button
                android:id="@+id/Inlis"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:backgroundTint="#587FBA"
                android:onClick="dil"
                android:tag="en"
                android:text="@string/en_tm"
                android:textColor="#D8E4D6" />

            <Button
                android:id="@+id/Russiya"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:backgroundTint="#587FBA"
                android:onClick="dil"
                android:tag="ru"
                android:text="@string/ru_tm"
                android:textColor="#D8E4D6" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>