<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Soragucngiris"
    tools:ignore="MissingClass">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:src="@drawable/card"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="700dp"
        android:layout_marginTop="-55dp"
        android:layout_height="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        android:src="@drawable/sorag"
        tools:ignore="MissingConstraints" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:layout_gravity="top"
            android:layout_weight="1"
            tools:ignore="ScrollViewSize">

            <ImageView
                android:id="@+id/cardView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="top"
                android:layout_marginStart="0dp"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:src="@drawable/card"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/cardView1"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="130dp"
                android:layout_marginBottom="10dp"
                android:gravity="left|top"
                android:padding="10dp"
                android:text="@string/info_s_tm"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/cardView1"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center|right"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="28dp"
                android:layout_weight="1"
                android:backgroundTint="#587FBA"
                android:onClick="girsorag"
                android:text="@string/basla_tm"
                android:textColor="#D8E4D6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.993"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.341" />

            <androidx.cardview.widget.CardView
                android:id="@+id/çard"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignTop="@+id/cardView1"
                android:layout_alignParentStart="true"
                android:layout_marginStart="21dp"
                android:layout_marginTop="-31dp"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center"

                    app:srcCompat="@drawable/yokezis" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="245dp"
                android:layout_height="109dp"
                android:layout_alignTop="@+id/cardView1"
                android:layout_marginStart="1dp"
                android:layout_marginTop="9dp"
                android:layout_toEndOf="@+id/çard"
                android:gravity="left|center|top"
                android:paddingLeft="10dp"
                android:text="@string/Hunar_tm"
                android:textColor="#6E8BB8"
                android:textSize="30dp" />


        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>